# Project---Hospital-Simulator

./: CMakeLists.txt  Doxyfile  README.md  makefile
cmake-build/: README.md
inc/: gtk3.h  hospital_structures.h  main.h  persons.h  seat_rows.h
modules/: CodeCoverage.cmake  GTest_ExternalProject.cmake
src/: gtk3.c  main.c  persons.c  seat_rows.c
tests/: gui_tests.cxx  main_tests.cxx  person_tests.cxx  seat_row_tests.cxx
